--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Hello Deno</title>
+    <title>Deno CRUD</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mithril/2.0.4/mithril.min.js" integrity="sha256-8cl9GQUonfQFzoyXWdf5ZsGnUJ/FC8PE6E7E9U6JE30=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.15/lodash.min.js" integrity="sha256-VeNaFBVDhoX3H+gJ37DpT/nTuZTdjYro9yBruHjVmoQ=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dexie/2.0.4/dexie.min.js" integrity="sha256-ubffRsoh9QK5xJC/u3s3drtGFBZUHBm9bHFRzYvtkJI=" crossorigin="anonymous"></script>
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css" integrity="sha256-ujE/ZUB6CMZmyJSgQjXGCF4sRRneOimQplBVLu8OU5w=" crossorigin="anonymous" />
   </head>
   <body>
-  	<script src="./autoForm.js"></script>
-  	<script src="./app.js"></script>
+    <script src="./autoForm.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
